[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/trap_b.gd" type="Script" id=1]

[node name="trap_b" type="Area2D" groups=[
"trap_b",
]]
z_index = 100
script = ExtResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="."]
scale = Vector2( 0.5, 0.5 )
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( -1.99556, -2.01635, 2.99838, -2.01635, 2.99838, -2.98862, 5.03131, -3.01072, 5.00921, -4.00509, 6.04778, -4.00509, 6.04778, -5.02155, 6.99795, -5.02155, 6.99795, -7.98256, 6.02568, -7.98256, 6.04778, -8.97693, 5.00921, -8.97693, 4.96502, -9.9934, 3.02048, -9.9934, 2.99838, -10.9878, -1.97347, -11.0099, -1.97347, -10.0155, -4.0064, -9.9934, -4.0064, -8.99903, -5.02286, -8.99903, -5.00077, -8.04886, -5.92885, -7.98256, -5.95094, -4.99946, -5.06706, -4.97736, -4.97867, -3.98299, -4.0285, -3.96089, -4.0064, -3.05491, -1.99556, -2.98862 )

[node name="Polygon2D2" type="Polygon2D" parent="."]
position = Vector2( 7.7864, 8.71091 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( -1.99556, -2.01635, 2.99838, -2.01635, 2.99838, -2.98862, 5.03131, -3.01072, 5.00921, -4.00509, 6.04778, -4.00509, 6.04778, -5.02155, 6.99795, -5.02155, 6.99795, -7.98256, 6.02568, -7.98256, 6.04778, -8.97693, 5.00921, -8.97693, 4.96502, -9.9934, 3.02048, -9.9934, 2.99838, -10.9878, -1.97347, -11.0099, -1.97347, -10.0155, -4.0064, -9.9934, -4.0064, -8.99903, -5.02286, -8.99903, -5.00077, -8.04886, -5.92885, -7.98256, -5.95094, -4.99946, -5.06706, -4.97736, -4.97867, -3.98299, -4.0285, -3.96089, -4.0064, -3.05491, -1.99556, -2.98862 )

[node name="Polygon2D3" type="Polygon2D" parent="."]
position = Vector2( -7.26434, 8.0041 )
scale = Vector2( 0.5, 0.5 )
color = Color( 0.0313726, 1, 0, 1 )
polygon = PoolVector2Array( -1.99556, -2.01635, 2.99838, -2.01635, 2.99838, -2.98862, 5.03131, -3.01072, 5.00921, -4.00509, 6.04778, -4.00509, 6.04778, -5.02155, 6.99795, -5.02155, 6.99795, -7.98256, 6.02568, -7.98256, 6.04778, -8.97693, 5.00921, -8.97693, 4.96502, -9.9934, 3.02048, -9.9934, 2.99838, -10.9878, -1.97347, -11.0099, -1.97347, -10.0155, -4.0064, -9.9934, -4.0064, -8.99903, -5.02286, -8.99903, -5.00077, -8.04886, -5.92885, -7.98256, -5.95094, -4.99946, -5.06706, -4.97736, -4.97867, -3.98299, -4.0285, -3.96089, -4.0064, -3.05491, -1.99556, -2.98862 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
position = Vector2( -0.33371, -0.0834274 )
polygon = PoolVector2Array( -10.3143, 3.9351, -8.47892, 2.68369, -5.55898, 2.51684, -1.38761, -1.15396, -2.97273, -3.82363, -0.720192, -5.49217, 1.78262, -5.40874, 3.36774, -4.07391, 3.61802, -2.23851, 0.531212, -0.987104, 6.70483, 3.10083, 9.70821, 3.35111, 11.5436, 6.18764, 9.62478, 7.52247, 6.95511, 7.6059, 4.70258, 6.27106, -3.05616, 4.35224, -5.39212, 6.93848, -7.97836, 7.02191, -10.3143, 5.43679 )
[connection signal="body_entered" from="." to="." method="_on_trap_b_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_trap_b_body_exited"]
